logs/quantum/test_results/core_test_results.txt
src/quantum/interactions/tests/core_test.zig:15:38: error: expected ';' after statement
    const handler = try core.handlers.{[string.pascalCase(core)]}Handler.init(allocator);
                                     ^
